# otus_cpp

./: 01-build__test__deploy_2main_8cpp.html  01-build__test__deploy_2main_8cpp__incl.map  01-build__test__deploy_2main_8cpp__incl.md5  01-build__test__deploy_2main_8cpp_a2c3f6775325c30275d11c6abee2db6a0_cgraph.map  01-build__test__deploy_2main_8cpp_a2c3f6775325c30275d11c6abee2db6a0_cgraph.md5  02-ip__filter_2main_8cpp.html  02-ip__filter_2main_8cpp__incl.map  02-ip__filter_2main_8cpp__incl.md5  02-ip__filter_2main_8cpp_a2c3f6775325c30275d11c6abee2db6a0_cgraph.map  02-ip__filter_2main_8cpp_a2c3f6775325c30275d11c6abee2db6a0_cgraph.md5  02-ip__filter_2tests_8cpp.html  02-ip__filter_2tests_8cpp__incl.map  02-ip__filter_2tests_8cpp__incl.md5  02-ip__filter_2tests_8cpp_a14ab820de89f4faa29313420797f07b5_cgraph.map  02-ip__filter_2tests_8cpp_a14ab820de89f4faa29313420797f07b5_cgraph.md5  02-ip__filter_2tests_8cpp_a28d47fa0c7cc0fc97603117177fbb6aa_cgraph.md5  02-ip__filter_2tests_8cpp_a290d31853457afe1fcfe14ce6808fc9d_cgraph.map  02-ip__filter_2tests_8cpp_a290d31853457afe1fcfe14ce6808fc9d_cgraph.md5  02-ip__filter_2tests_8cpp_a3d9e57c3b3afd5421ee3f70c8cd5a6f8_cgraph.map  02-ip__filter_2tests_8cpp_a3d9e57c3b3afd5421ee3f70c8cd5a6f8_cgraph.md5  02-ip__filter_2tests_8cpp_a82e81f389afe3b4ccb78c779acdeec80_cgraph.map  02-ip__filter_2tests_8cpp_a82e81f389afe3b4ccb78c779acdeec80_cgraph.md5  02-ip__filter_2tests_8cpp_a8675c3383bc9d5f744c2fb111b739b85_cgraph.map  02-ip__filter_2tests_8cpp_ab006f0bc42445ba635fd8a1145c7eebe_cgraph.md5  02-ip__filter_2tools_8cpp.html  02-ip__filter_2tools_8cpp__incl.map  02-ip__filter_2tools_8cpp__incl.md5  02-ip__filter_2tools_8h.html  02-ip__filter_2tools_8h__dep__incl.map  02-ip__filter_2tools_8h__dep__incl.md5  02-ip__filter_2tools_8h__incl.map  02-ip__filter_2tools_8h__incl.md5  02-ip__filter_2tools_8h_source.html  03-my__allocator_2main_8cpp.html  03-my__allocator_2main_8cpp__incl.map  03-my__allocator_2main_8cpp__incl.md5  03-my__allocator_2main_8cpp_a2c3f6775325c30275d11c6abee2db6a0_cgraph.map  03-my__allocator_2main_8cpp_a2c3f6775325c30275d11c6abee2db6a0_cgraph.md5  03-my__allocator_2tests_8cpp.html  03-my__allocator_2tests_8cpp__incl.map  (+304 more)
.github/workflows/: develop.yaml  develop.yml  doxygen.yaml  doxygen.yml  release.yaml
01-build_test_deploy/: CMakeLists.txt  README.md  gtest_version.cpp  main.cpp  test_version.cpp
02-ip_filter/: CMakeLists.txt  filters.h  ip.h  main.cpp  tests.cpp  tools.cpp  tools.h
03-my_allocator/: CMakeLists.txt  README.md  allocator.h  list.h  main.cpp  tests.cpp  tools.cpp  tools.h
04-ip_printer/: CMakeLists.txt  README.md  ip_printer.h  main.cpp  tests.cpp  tools.cpp  tools.h  version.h.in
05-graphical_editor/: CMakeLists.txt  README.md  main.cpp
05-graphical_editor/src/: src.cmake
05-graphical_editor/src/controller/: controller.cmake  controller.h
05-graphical_editor/src/model/: model.cmake  model.h
05-graphical_editor/src/view/: view.cmake  view.h  window_interface.h
06-matrix/: CMakeLists.txt  README.md  main.cpp
06-matrix/src/: main.cpp  sparse_matrix.h  src.cmake
06-matrix/src/sparse_matrix/: sparse_matrix.cmake  sparse_matrix.h
06-matrix/tests/: CMakeLists.txt  test.cpp
07-bulk/: CMakeLists.txt
07-bulk/src/: bulk.hpp  main.cpp
08-bayan/: CMakeLists.txt  README.md
08-bayan/src/: bayan.cpp  bayan.h  hash.h  main.cpp  observer.hpp  parameters.h  select_files.h
08-bayan/tests/: CMakeLists.txt  test_bayan.cpp  test_files.cpp
08-bayan/tests/test_directory/: 12.txt  test2.csv
08-bayan/tests/test_directory/depth1/: 1CMakeLists.txt  main1.cpp
08-bayan/tests/test_directory/depth1/depth2/depth3/depth4/: 2CMakeLists.txt
08-bayan/tests/test_directory/depth1_1/: main (copy).cpp
scripts/: check_valgrind.sh  run_unit_tests.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_4.js  files_5.js  files_6.js  files_7.js  files_a.js  files_c.js  functions_0.js  (+36 more)
